Fix "Set up Ruby" Github Action
Co-authored-by: Sam <samuel@plaindocs.com>

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -55,7 +55,7 @@ jobs:
         path: html.tar.gz
 
     - name: Set up Ruby
-    - uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.4'
         bundler-cache: true
